--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 *.tar.gz
 *.rar
 
+0001-complete-almost.patch
+patches/
+*.patches
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /.gradle/
