--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ mainClassName = "edu.handong.csee.isel.java.patch.BugPatchCollector"
 
 dependencies {
 	
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-csv
+	compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
+	
+	
 	// https://mvnrepository.com/artifact/net.sf.supercsv/super-csv
 	compile group: 'net.sf.supercsv', name: 'super-csv', version: '2.4.0'
 	
