--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-csv
 	compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
 	
+	// https://mvnrepository.com/artifact/org.jsoup/jsoup
+	compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
 	
 	// https://mvnrepository.com/artifact/net.sf.supercsv/super-csv
 	compile group: 'net.sf.supercsv', name: 'super-csv', version: '2.4.0'
