--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
 	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+	
+	// https://mvnrepository.com/artifact/org.springframework/spring-core
+	compile group: 'org.springframework', name: 'spring-core', version: '2.5.6'
 }
 
 // In this section you declare where to find the dependencies of your project
