--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ dependencies {
 	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 	
 	// https://mvnrepository.com/artifact/org.eclipse.jdt/org.eclipse.jdt.core
+	
+	
+	// weka 3.7.9
+    compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.9'
 	compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.16.0'
 }
 
