--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+
+# Created by https://www.gitignore.io/api/java,gradle
+# Edit at https://www.gitignore.io/?templates=java,gradle
+
+### Java ###
 # Compiled class file
 *.class
-.DS_Store
-.settings/org.eclipse.buildship.core.prefs
+
 # Log file
 *.log
 
@@ -20,14 +24,26 @@
 *.tar.gz
 *.rar
 
-0001-complete-almost.patch
-patches/
-*.patches
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/bin/
-/0001-print-patch-between-two-commits-using-old-commit-has.patch
-/temp/
-/repositories/
-/new.csv
+
+### Gradle ###
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+### Gradle Patch ###
+**/build/
+
+# End of https://www.gitignore.io/api/java,gradle
