--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
  *
  * This generated file contains a sample Java Library project to get you started.
  * For more details take a look at the Java Libraries chapter in the Gradle
- * user guide available at https://docs.gradle.org/4.7/userguide/java_library_plugin.html
+ * user guide available at https://docs.gradle.org/5.1.1/userguide/java_library_plugin.html
  */
 
 plugins {
@@ -11,9 +11,15 @@ plugins {
     id 'java-library'
 }
 
+repositories {
+    // Use jcenter for resolving your dependencies.
+    // You can declare any Maven/Ivy/file repository here.
+    jcenter()
+}
+
 
 apply plugin: 'application'
-mainClassName = "edu.handong.csee.isel.Runner.Main"
+mainClassName = "edu.handong.csee.second.runner.Main"
 
 dependencies {
 	
@@ -32,29 +38,26 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
 	compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.0.1.201806211838-r'
 
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:23.0'
-
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+	     // This dependency is exported to consumers, that is to say found on their compile classpath.
+	    api 'org.apache.commons:commons-math3:3.6.1'
+	
+	    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+	    implementation 'com.google.guava:guava:26.0-jre'
+	
+	    // Use JUnit test framework
+	    testImplementation 'junit:junit:4.12'
     
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
 	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 	
 	// https://mvnrepository.com/artifact/org.eclipse.jdt/org.eclipse.jdt.core
 	
+	// https://mvnrepository.com/artifact/commons-io/commons-io
+	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 	
 	// weka 3.7.9
     compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.9'
 	compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.16.0'
-}
 
-// In this section you declare where to find the dependencies of your project
-repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+   
 }
