--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ gradle-app.setting
 **/build/
 
 # End of https://www.gitignore.io/api/java,gradle
+/repositories/
+/apacheFLUME/
+/apacheJCR/
+/apacheJENA/
+/apacheNUTCH/
