--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,28 @@
  * For more details take a look at the Java Libraries chapter in the Gradle
  * user guide available at https://docs.gradle.org/5.1.1/userguide/java_library_plugin.html
  */
+/*
 
-plugins {
-    // Apply the java-library plugin to add support for Java Library
-    id 'java-library'
+jar {
+    manifest {
+        attributes 'Main-Class': 'edu.handong.csee.isel.Main'
+    }
 }
+
+bootJar {
+   jar.enabled = true // 빌드시 jar 을 실행
+}*/
+ // Include dependent libraries in archive.
+
+
 
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
+	flatDir {
+		dirs 'lib'
+	}
 }
 
 
@@ -24,6 +36,7 @@ mainClassName = "edu.handong.csee.isel.Main"
 
 sourceCompatibility = 11
 targetCompatibility = 11
+
 
 dependencies {
 
@@ -53,7 +66,7 @@ dependencies {
 
 
 	     // This dependency is exported to consumers, that is to say found on their compile classpath.
-	    api 'org.apache.commons:commons-math3:3.6.1'
+	    //api 'org.apache.commons:commons-math3:3.6.1'
 	
 	    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
 	    implementation 'com.google.guava:guava:26.0-jre'
@@ -62,18 +75,14 @@ dependencies {
 	    testImplementation 'junit:junit:4.12'
     
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
-	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+	compile group: 'commons-cli', name: 'commons-cli', version: '1.4' // remove
 	
 	// https://mvnrepository.com/artifact/org.eclipse.jdt/org.eclipse.jdt.core
 	
 	// https://mvnrepository.com/artifact/commons-io/commons-io
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
-	
-	// weka 3.7.9
-  //  compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.9'
-    compile group: 'nz.ac.waikato.cms.weka', name: 'weka-dev', version: '3.9.3'
-    
-	compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.16.0'
+
+    compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.24.0'
 
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
@@ -92,7 +101,69 @@ dependencies {
     
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson
     compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
-    
 
-   
+    // weka 3.7.9
+    //  compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.9'
+//    compile group: 'nz.ac.waikato.cms.weka', name: 'weka-dev', version: '3.9.3'
+    // https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-stable
+    compile group: 'nz.ac.waikato.cms.weka', name: 'weka-stable', version: '3.8.5'
+
+    // https://mvnrepository.com/artifact/org.tartarus/snowball
+//    compile group: 'org.tartarus', name: 'snowball', version: '1.0'
+
+	compile files('lib/snowball-20051019.jar')
+
+
+}
+/*
+jar {
+  manifest { 
+    attributes "Main-Class": "edu.handong.csee.isel.Main"
+  }  
+
+  from {
+    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+  }
+}*/
+/*
+jar {
+  manifest {
+    attributes(
+      'Main-Class': "edu.handong.csee.isel.Main",
+    )
+  }
+}
+
+task fatJar(type: Jar) {
+  manifest.from jar.manifest
+  classifier = 'all'
+  from {
+    (configurations.compile.findAll { !it.path.endsWith(".pom") }).collect {
+    it.isDirectory() ? it : zipTree(it)
+}
+  } {
+    exclude "META-INF/*.SF"
+    exclude "META-INF/*.DSA"
+    exclude "META-INF/*.RSA"
+  } 
+  with jar
+}
+
+artifacts {
+    archives fatJar
+}*/
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'edu.handong.csee.isel.Main'
+    }
+    baseName = project.name
+    
+    from ((configurations.compile.findAll { !it.path.endsWith(".pom") }).collect { entry -> zipTree(entry) }) {
+        exclude 'META-INF/MANIFEST.MF'
+        exclude 'META-INF/*.SF'
+        exclude 'META-INF/*.DSA'
+        exclude 'META-INF/*.RSA'
+    }
+    with jar
 }
