--- a/.gitignore
+++ b/.gitignore
@@ -82,13 +82,13 @@ local.properties
 .mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# *.jar
+# *.war
+# *.nar
+# *.ear
+# *.zip
+# *.tar.gz
+# *.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -122,3 +122,6 @@ Temporary Items
 .apdisk
 /.gradle/
 /build/
+
+# Directories created on usage of vscode editor
+.vscode/
